# docs/web_deploy/openapi.yaml
@@ -50,6 +50,51 @@ paths:
                       $ref: '#/components/schemas/LoginError'
         '500':
           $ref: '#/components/responses/InternalError'
+  /created_at:
+    post:
+      tags:
+        - User Authentication
+      summary: CreatedAt
+      operationId: createdAt
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - data
+              properties:
+                data:
+                  type: object
+                  $ref: '#/components/schemas/SessionTokenRequest'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    $ref: '#/components/schemas/CreatedAt'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - errors
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/LoginError'
+        '500':
+          $ref: '#/components/responses/InternalError'
   /login:
     post:
       tags:
@@ -351,6 +396,21 @@ components:
           pattern: '^0x[0-9a-fA-F]+$'
           example: '0x0bf7b3c454fedc179af06cd02f62fb3d89b2ac16962d50137330ffeebe9fac5f6bb2d1f2a971834a8eb84ce0a28894578286812a1131cfe7921b2d325d0b06041c'
           description: 'Backend-generated message, signed with MetaMask''s private_sign'
+    CreatedAt:
+      allOf:
+        - $ref: '#/components/schemas/CreatedAt'
+        - type: object
+          required:
+            - attributes
+          properties:
+            attributes:
+              type: object
+              required:
+                - created_at
+              properties:
+                created_at:
+                  type: string
+                  example: '11-11-2011 11:11:11'
     BadRequestError:
       type: object
       required:
@@ -2027,6 +2087,13 @@ components:
           type: string
           enum:
             - registration
+    SessionTokenRequest:
+      type: object
+      required:
+        - session_token
+      properties:
+        session_token:
+          type: string
     User:
       allOf:
         - $ref: '#/components/schemas/UserKey'
@@ -2162,3 +2229,9 @@ components:
           - desc
         default: desc
         description: 'Order of records on the page. If sortingParam is not specified, order of records is by default sorted by ID.'
+  securitySchemes:
+    bearerAuth:
+      bearerAuth:
+        type: http
+        scheme: bearer
+        bearerFormat: JWT
