# resources/model_created_at_attributes.go
@@ -1,0 +1,9 @@
+/*
+ * GENERATED. Do not modify. Your changes might be overwritten!
+ */
+
+package resources
+
+type CreatedAtAttributes struct {
+	CreatedAt string `json:"created_at"`
+}
